Persit the property values of the WebViewScroll

This CL changes the CRWWebViewScrollViewProxy such as it is now
persisting the value of the properties even after setting a new
ScrollView.

Bug: 831519
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I776c7983df536d5bed9c03a826998413b8a6d246
Reviewed-on: https://chromium-review.googlesource.com/1013520
Reviewed-by: Eugene But <eugenebut@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551271}
Former-commit-id: 5fe307159eea27de82c37e8898d875bd4e4ceab6